--- a/选课系统.ipynb
+++ b/选课系统.ipynb
@@ -215,31 +215,34 @@
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    PASSWORD = ''  # 输入你的密码,其会被自动加密\n",
-    "    ID = '' #你的学号\n",
+    "    PASSWORD = 'tLYkgIaUGnshye02DqGGPw=='  # 输入你的密码,其会被自动加密\n",
+    "    ID = '37220232203813' #你的学号\n",
     "    TEACHINGCLASSTYPE = {\n",
     "        '校选课': 'XGKC',\n",
     "        '本专业计划课程': 'TJKC',\n",
     "        '本专业其他年级课程': 'FANKC',\n",
     "        '体育课程': 'TYKC',\n",
     "    }\n",
-    "    COURSE_LIST = ['商业社会与现代中国', '国际经济与贸易学科前沿系列课程',\n",
-    "                   '统计学与数据科学业界系列讲座', '文献检索管理与分析']  # 课程列表\n",
+    "    COURSE_LIST = ['微积分I-2',]  # 课程列表\n",
     "    xmu = XMUCourseEntroller(ID, PASSWORD)\n",
     "    xmu.login()  # 登录\n",
-    "    xmu.query_course_list(TEACHINGCLASSTYPE.values(),\n",
-    "                          delay=1)  # 由于每次密钥不一样,建议每次都读取一次\n",
+    "    xmu.query_course_list(TEACHINGCLASSTYPE.values(),delay=1)  # 由于每次密钥不一样,建议每次都读取一次\n",
     "\n",
     "    for course in COURSE_LIST:  # 演示用\n",
     "        xmu.change_course(course, 'del')  # 退课\n",
-    "        xmu.loop_add_course(course)\n",
-    "  \n"
+    "        xmu.loop_add_course(course)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
